<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CountWater</string>
    <string name="title_profile">profile</string>
    <string name="title_master">master</string>
    <string name="title_count">count</string>
    <string name="title_statistics">statistics</string>
    <string name="person_count" tools:ignore="TypographyDashes">8 (938) 599-62-13</string>
    <string name="person_name">Глебова Ульяна Тимофеевна</string>
    <string name="counts">Ваши счетчики</string>
    <string name="hot_water">Горячее водоснабжение</string>
    <string name="ser_number">Серийный номер</string>
    <string name="add">добавить показания</string>
    <string name="request1">создать заявку</string>
    <string name="cold_water">Холодное водоснабжение</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skan">сканировать</string>
    <string name="send">отправить</string>
    <string name="master">вызвать мастера</string>
    <string name="date">День подачи показаний</string>
    <string name="all_requests">Ваши заявки</string>
    <string name="hiht">Опишите свою проблему</string>
    <string name="choose_with_gallery">выбрать из галереи</string>
    <string name="make_photo">сделать фото</string>
    <string name="enter"><![CDATA[войти >]]></string>
    <string name="loading">loading...</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="count">ввести показания</string>
    <string name="save">сохранить изменения</string>
    <string name="address">Адрес</string>
    <string name="name">ФИО</string>
    <string name="telephone">Телефон</string>
    <string name="new_login">При первом запуске вы можете сменить пароль на более надежный или же оставить ранее используемый</string>
    <string name="newlogin">Новый логин</string>
    <string name="newpassword">Новый пароль</string>
    <string name="tel">Телефон:</string>
    <string name="place">Адрес:</string>
    <string name="month">За месяц</string>
    <string name="three_month">За 3 месяца</string>
    <string name="year">За год</string>
    <string name="master1">Сантехник</string>
    <string name="master2">Электрик</string>
    <string name="master3">Муж на час</string>
    <string name="smart_counters">Умные счетчики</string>
    <string name="add_count">Номер счетчика</string>
    <string name="add_smart_count">добавить счетчик</string>
    <string name="id_count">Номер счетчика</string>
    <string name="id_modem">Номер модема</string>
    <string name="id_registr">Номер регистратора</string>
    <string name="cold">холодная вода</string>
    <string name="hot">горячая вода</string>
    <string name="smart">умный</string>
    <string name="notsmart">обычный</string>
    <string name="tsj">Телефон вашего ТСЖ</string>


</resources>