<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".NewLogin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_style"
            android:elevation="5dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/newlogin"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="14dp"
            android:stateListAnimator="@null"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:translationZ="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.337" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_style"
            android:elevation="5dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/newpassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="14dp"
            android:stateListAnimator="@null"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:translationZ="5dp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
            app:layout_constraintVertical_bias="0.063"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:fontFamily="@font/montserrat"
            android:paddingHorizontal="22dp"
            android:paddingVertical="15dp"
            android:stateListAnimator="@null"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:translationZ="5dp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_auth"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/new_login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>