<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logout"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/ic_logout"
            android:elevation="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:foreground="@drawable/ripple_add_button"
            android:paddingHorizontal="22dp"
            android:paddingVertical="15dp"
            android:stateListAnimator="@null"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:translationZ="5dp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/arrow"
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_arrow"
            android:elevation="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:foreground="@drawable/ripple_add_button"
            android:paddingHorizontal="22dp"
            android:paddingVertical="15dp"
            android:stateListAnimator="@null"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:translationZ="5dp"
            app:cornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/textInputFio"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/et_style"
            android:elevation="5dp"
            android:ems="10"
            android:hint="@string/name"
            android:fontFamily="@font/montserrat"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="14dp"
            android:stateListAnimator="@null"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:translationZ="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logout" />


        <EditText
            android:id="@+id/textInputAddress"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/et_style"
            android:elevation="5dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="14dp"
            android:stateListAnimator="@null"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:translationZ="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputFio" />

        <EditText
            android:id="@+id/textInputTelephone"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/et_style"
            android:elevation="5dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/telephone"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="14dp"
            android:stateListAnimator="@null"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:translationZ="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputAddress"
            tools:ignore="TextFields" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:background="@drawable/bgsend"
            android:elevation="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:foreground="@drawable/ripple_add_button"
            android:paddingHorizontal="22dp"
            android:paddingVertical="15dp"
            android:stateListAnimator="@null"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:translationZ="5dp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>