<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BlankFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingClass">

            <TextView
                android:id="@+id/numberView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="218363Н16"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/et_style"
                android:elevation="5dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/count"
                android:inputType="number"
                android:minHeight="48dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="14dp"
                android:stateListAnimator="@null"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:translationZ="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numberView"
                app:layout_constraintVertical_bias="0.133"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSkan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:elevation="5dp"
                android:fontFamily="@font/montserrat"
                android:paddingHorizontal="22dp"
                android:paddingVertical="15dp"
                android:stateListAnimator="@null"
                android:text="@string/skan"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:translationZ="5dp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:background="@drawable/bgsend"
                android:elevation="5dp"
                android:fontFamily="@font/montserrat_bold"
                android:foreground="@drawable/ripple_add_button"
                android:paddingHorizontal="22dp"
                android:paddingVertical="15dp"
                android:stateListAnimator="@null"
                android:text="@string/send"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:translationZ="5dp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>